# testfiles

./: MTG_NetCDF.c  MTG_netCDF.jl  MTG_netCDF.py  MTG_satpy.py  MTG_xarray.py  center.py  composit_test.py  create_by_row.py  dask_test.py  find_files.py  find_files1.py  icon.py  index.py  messagebox.py  netcdf.py  quitbutton.py  rayleigh_correction_python.py  scatter.py  simple.py  tooltip.py  xarray_test.py  xarray_test1.py
GOES/GOES-master/examples/v3.4.4/: locates_files.ipynb  simple_plot.ipynb
reference_grid/: gshhs_plot.py  reference_grid.py  reference_grid_11.py
reference_grid_qt/: CMakeLists.txt  reference_grid_qt1.cpp
xarray-data-master/: 05_download-xarray.ipynb  precipitation.nc4
